eventline layout issues fix

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -2257,10 +2257,10 @@ div[role="option"]::before {
 }
 .ant-slider-tooltip {
   .ant-tooltip-arrow-content  {
-    --antd-arrow-background-color: #4484ce;
+    --antd-arrow-background-color: rgba(45, 145, 203, 0.856);
   }
   .ant-tooltip-inner{
-  background-color: #4484ce;
+  background-color: rgba(45, 145, 203, 0.856);
   }
 }
   .ant-slider-mark {
@@ -2489,5 +2489,16 @@ div[role="option"]::before {
   }
   .ant-tabs-nav-more {
     display: none;
+  }
+}
+
+.skeleton-rangslider {
+  .ant-slider-tooltip {
+    .ant-tooltip-inner {
+  background-color: #ebebeb;
+    }
+    .ant-tooltip-arrow-content {
+    --antd-arrow-background-color: #ebebeb;
+     }
   }
 }
